2000-04-19  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	K&R compiler fixes.
	* dwarf2.c (concat_filename): Avoid string literal concatenation.
	* ieee.c (ieee_get_symtab): Don't initialise union in struct.

2000-04-12  Alan Modra  <alan@linuxcare.com.au>

	* dep-in.sed: Match space before file name, not after.
	* Makefile.am: Regenerate dependencies.
	* Makefile.in: Regenerate.

	* reloc.c (_bfd_relocate_contents): In complain_overflow_bitfield
	case, allow address wrap-around stupidly removed 2000-03-17.  Sign
	extend without an if statement.

2000-04-04  Alan Modra  <alan@linuxcare.com.au>

	* po/bfd.pot: Regenerate.

	* Makefile.am: Remove extraneous mkdep comment.
	(MKDEP): Use gcc -MM rather than mkdep.
	(DEP): Quote when passing vars to sub-make.  Add warning
	message to end.
	(DEP1): Rewrite for "gcc -MM".
	(CLEANFILES): Add DEP2.
	Update dependencies.
	* Makefile.in: Regenerate.

2000-04-03  H.J. Lu  <hjl@gnu.org>

	* cache.c (bfd_open_file): Unlink the output file only if
	it has non-zero size.

2000-04-01  Ken Block USG  <block@zk3.dec.com>

	* elf64-alpha.c (elf64_alpha_relocate_section): Don't emit
	relative relocations for non-loaded sections in shared objects.
	(elf64_alpha_check_relocs): Similarly.

2000-03-31  Thomas de Lellis  <tdel@wrs.com>

	* srec.c : Set CHUNK size to 16 bytes to prevent download failures
	on some targets.
	* ihex.c : Ditto.

Wed Mar 30 15:28:00 2000  Donald Lindsay  <dlindsay@cygnus.com>

	* elf32-m32r.c (m32r_elf_generic_reloc): new function.  All
	HOWTO references to bfd_elf_generic_reloc, that have
	partial_inplace == true, now use the new function.  The function
	is based on the recent rewrite of m32r_elf_lo16_reloc(), and
	extends its fixes to the R_M32R_{16,24,32} relocs.
	The new logic in m32r_elf_lo16_reloc() has been removed, and
	it instead calls the new routine to obtain that functionality.

2000-03-27  Alan Modra  <alan@linuxcare.com.au>

	* elf32-avr.c (elf32_avr_gc_mark_hook, elf32_avr_gc_sweep_hook,