@@ -1,3 +1,7 @@
+2000-04-29  Andreas Jaeger  <aj@suse.de>
+
+	* as.h: Correctly check GCC version.
+
 2000-04-20  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* config/tc-mn10300.c (HAVE_AM30): Define.
