@@ -1,3 +1,7 @@
+2000-04-29  Andreas Jaeger  <aj@suse.de>
+
+	* ld.h: Correctly check GCC version.
+
 2000-04-19  Alan Modra  <alan@linuxcare.com.au>
 
 	* ld.texinfo (Simple Example): Remove extraneous paragraph.
